[package]
name = "rustyswords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.85.3"
rgb = "0.8.36"
x11 = "2.21.0"

[build-dependencies]
pkg-config = "0.3.27"


[dependencies.winapi]
version = "0.3.9"
features = ["winuser"]
